--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,11 @@
             <table border=1 cellpadding=7>
             <tr>
                 <th>Name</th>
-                <th>Link</th>
             </tr>
             {% for obj in object_list['features'] %}
             <tr>
-                <td>{{ obj['properties']['Name']}}</td>
-                <td>{{ obj['properties']['Link']}}</td>
+            <td><a href="{{ obj['properties']['ID'] }}/">{{ obj['properties']['Name'] }}</a></td>
+            
             </tr>
             {% endfor %}
         </table>
