--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html lang="en">
-    <head></head>
+    <head>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+        <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js?2"></script>
+ 
+    </head>
     <body>
+     <div id="map" style="width:100%; height:300px;"></div>
         <h1>Geschichtsstationen Moers</h1>
             <table border=1 cellpadding=7>
             <tr>
@@ -14,5 +19,23 @@
             </tr>
             {% endfor %}
         </table>
+              <script type="text/javascript">
+            var map = L.map('map').setView([51.4515, 6.6263], 15);
+            var mapquestLayer = new L.TileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
+                maxZoom: 18,
+                attribution: 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>,<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors.',
+                subdomains: ['otile1','otile2','otile3','otile4']
+            });
+         
+             map.addLayer(mapquestLayer);
+             
+            var data = object_list;
+            var dataLayer = L.geoJson(data);
+            map.addLayer(dataLayer);
+
+            
+            
+        </script>
+        
     </body>
 </html>
