Detail vergleicht jetzt Int/Int und nicht mehr String/Int. Index kennt jetzt auch IDs. Karte immer noch ohne Marker

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,7 +3,7 @@
     <head></head>
     <body> 
                 <h1>{{  object['properties']['Name'] }}</h1>
-                <h2> {{ object['properties']['ID']   }}</h2> 
+                <a href="{{ object['properties']['Link'] }}/">{{ object['properties']['Link'] }}</a>
     </body>
 </html>  
 
