--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,15 @@
                 {% endfor %}
               ]
             };
-            var dataLayer = L.geoJson(data);
+          var dataLayer = L.geoJson(data, {
+                onEachFeature: function(feature, layer) {
+                    layer.bindPopup(
+                        '<a href="' + feature.properties.id + '/">' +
+                            feature.properties.full_name +
+                        '</a>'
+                    );
+                }
+            });
             map.addLayer(dataLayer);
 
 console.log(dataLayer)
